# budget-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
app/: __init__.py  main.py
app/adapters/: __init__.py  imap_client.py
app/core/: config.py  models.py  utils.py
app/parsers/: __init__.py  factory.py
app/parsers/strategies/: __init__.py  bac.py  base.py  davibank.py  davivienda.py
app/repositories/: category_repo.py  csv_repo.py
app/services/: exchange_rate.py
data/: ledger.csv  merchant_categories.csv
frontend/: app.json  package-lock.json  package.json
frontend/app/: _layout.tsx  breakdown.tsx  index.tsx
frontend/components/: ApiKeyModal.tsx  BackfillModal.tsx  DeleteModal.tsx  EditModal.tsx  Sidebar.tsx  StatsBar.tsx  Toast.tsx  TransactionItem.tsx  index.ts
frontend/lib/: api.ts  theme.ts  types.ts
static/: app.js  index.html  styles.css
tests/: __init__.py  conftest.py  test_api.py  test_category_repo.py  test_crud.py  test_models.py
